--- a/k8s-4g-core/templates/hss-database/mongo-statefulset.yaml
+++ b/k8s-4g-core/templates/hss-database/mongo-statefulset.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: mongo
-  namespace: open5gs
+  namespace: {{ .Release.Namespace }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1beta1
 kind: ClusterRole
@@ -37,7 +37,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb
-  namespace: open5gs
+  namespace: {{ .Release.Namespace }}
   labels:
     name: mongo
 spec:
@@ -52,10 +52,10 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: mongo
-  namespace: open5gs
+  namespace: {{ .Release.Namespace }}
 spec:
   serviceName: "mongodb"
-  replicas: 1
+  replicas: {{ .Values.mongoReplicas }}
   selector:
     matchLabels:
       role: mongo
@@ -71,6 +71,13 @@ spec:
       containers:
         - name: mongo
           image: mongo
+          {{ if eq .Values.initSubcribers true }}
+          lifecycle:
+            postStart:
+              exec:
+                command: ["bash", "/open5gs/config-map/reg_subscriber.sh"]
+          {{ end }}
+
           command:
             - mongod
           args:
@@ -79,8 +86,22 @@ spec:
           ports:
             - containerPort: 27017
           volumeMounts:
-            - name: mongo-persistent-storage
-              mountPath: /data/db
+          - name: mongo-persistent-storage
+            mountPath: /data/db
+          {{ if eq .Values.initSubcribers true }}
+          - name: {{ .Release.Namespace }}-mongodb-imsi-config
+            mountPath: /open5gs/config-map/imsi.json
+            subPath: "imsi.json"
+          - name: {{ .Release.Namespace }}-mongodb-config
+            mountPath: /open5gs/config-map/reg_subscriber.sh
+            subPath: "reg_subscriber.sh"
+          {{ end }}
+
+          {{ if eq .Values.requestsPreferences.hssDatabase.requestsLimitsDefinition true}}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+          {{ end }}
+
         - name: mongo-sidecar
           image: morphy/k8s-mongo-sidecar
           env:
@@ -91,3 +112,11 @@ spec:
       volumes:
       - name: mongo-persistent-storage
         emptyDir: {}
+      {{ if eq .Values.initSubcribers true }}
+      - name: {{ .Release.Namespace }}-mongodb-imsi-config
+        configMap:
+          name: {{ .Release.Namespace }}-mongodb-imsi-config
+      - name: {{ .Release.Namespace }}-mongodb-config
+        configMap:
+          name: {{ .Release.Namespace }}-mongodb-config
+      {{ end }}
