--- a/k8s-4g-core/templates/mme/mme-deploy.yaml
+++ b/k8s-4g-core/templates/mme/mme-deploy.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: open5gs-mme-svc-pool-external
-  namespace: open5gs
+  name: {{ .Release.Namespace }}-mme-svc-pool-external
+  namespace: {{ .Release.Namespace }}
   labels:
     epc-mode: mme
 spec:
@@ -10,7 +10,7 @@ spec:
     epc-mode: mme    
   type: LoadBalancer
   externalIPs:
-    - 1.2.3.4
+    - {{ .Values.mmeExternalAddress }}
   ports:
   - name: s1ap
     port: 36412
@@ -20,8 +20,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: open5gs-mme-svc-pool
-  namespace: open5gs
+  name: {{ .Release.Namespace }}-mme-svc-pool
+  namespace: {{ .Release.Namespace }}
   labels:
     epc-mode: mme
 spec:
@@ -40,13 +40,13 @@ spec:
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: StatefulSet
 metadata:
-  name: open5gs-mme-deployment
-  namespace: open5gs
+  name: {{ .Release.Namespace }}-mme-deployment
+  namespace: {{ .Release.Namespace }}
   labels:
     epc-mode: mme
 spec:
   replicas: 1
-  serviceName: "open5gs-mme-svc-pool"
+  serviceName: "{{ .Release.Namespace }}-mme-svc-pool"
   selector:
     matchLabels:
       epc-mode: mme
@@ -57,16 +57,20 @@ spec:
     spec:
       containers:
         - name: mme
-          image: open5gs-custom
-          imagePullPolicy: Never
+          image: {{ .Values.image.repository }}
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: ["open5gs-mmed", "-c", "/open5gs/config-map/mme.yaml"]
           volumeMounts:
-          - name: open5gs-mme-config
+          - name: {{ .Release.Namespace }}-mme-config
             mountPath: /open5gs/config-map/mme.yaml
             subPath: "mme.yaml"
-          - name: open5gs-mme-diameter
+          - name: {{ .Release.Namespace }}-mme-diameter
             mountPath: /open5gs/config-map/diameter-mme.conf
-            subPath: "diameter-mme.conf"             
+            subPath: "diameter-mme.conf"
+          {{ if eq .Values.requestsPreferences.mme.requestsLimitsDefinition true}}
+          resources:
+            {{- toYaml .Values.resources | nindent 12 }}
+          {{ end }}          
           ports:
             - name: s1ap 
               containerPort: 36412
@@ -78,9 +82,9 @@ spec:
               containerPort: 2123
               protocol: UDP                        
       volumes:
-        - name: open5gs-mme-config
+        - name: {{ .Release.Namespace }}-mme-config
           configMap:
-            name: open5gs-mme-config
-        - name: open5gs-mme-diameter
+            name: {{ .Release.Namespace }}-mme-config
+        - name: {{ .Release.Namespace }}-mme-diameter
           configMap:
-            name: open5gs-mme-diameter
+            name: {{ .Release.Namespace }}-mme-diameter
