--- a/k8s-4g-core/templates/pcrf/pcrf-configmap.yaml
+++ b/k8s-4g-core/templates/pcrf/pcrf-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: open5gs-pcrf-config
-  namespace: open5gs
+  name: {{ .Release.Namespace }}-pcrf-config
+  namespace: {{ .Release.Namespace }}
   labels:
     epc-mode: pcrf
 data:
