--- a/k8s-4g-core/templates/pgwu/pgwu-configmap.yaml
+++ b/k8s-4g-core/templates/pgwu/pgwu-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: open5gs-pgwu-config
-  namespace: open5gs
+  name: {{ .Release.Namespace }}-pgwu-config
+  namespace: {{ .Release.Namespace }}
   labels:
     epc-mode: pgwu
 data:
