--- a/k8s-4g-core/templates/sgwc/sgwc-configmap.yaml
+++ b/k8s-4g-core/templates/sgwc/sgwc-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: open5gs-sgwc-config
-  namespace: open5gs
+  name: {{ .Release.Namespace }}-sgwc-config
+  namespace: {{ .Release.Namespace }}
   labels:
     epc-mode: sgwc
 data:
@@ -18,4 +18,4 @@ data:
 
     sgwu:
         pfcp:
-          - name: "open5gs-sgwu-svc-pool"        
+          - name: "{{ .Release.Namespace }}-sgwu-svc-pool"        
