--- a/k8s-4g-core/templates/sgwu/sgwu-configmap.yaml
+++ b/k8s-4g-core/templates/sgwu/sgwu-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: open5gs-sgwu-config
-  namespace: open5gs
+  name: {{ .Release.Namespace }}-sgwu-config
+  namespace: {{ .Release.Namespace }}
   labels:
     epc-mode: sgwu
 data:
@@ -17,7 +17,7 @@ data:
         gtpu:
            - dev: eth0
              advertise_addr:
-             - 1.2.3.4 
+             - {{ .Values.sgwuExternalAddress }} 
 
         pfcp:
            dev: eth0
