--- a/k8s-4g-core/templates/webui/web-ui-deploy.yaml
+++ b/k8s-4g-core/templates/webui/web-ui-deploy.yaml
@@ -1,17 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: open5gs-webui
-  namespace: open5gs
+  name: {{ .Release.Namespace }}-webui
+  namespace: {{ .Release.Namespace }}
   labels:
     epc-mode: webui
 spec:
   type: LoadBalancer
   externalIPs:
-    - 1.2.3.4
+    - {{ .Values.webUiExternalAddress }}
   ports:
     - name: http
-      port: 80
+      port: {{ .Values.webUiPort }}
       targetPort: 3000
   selector:
     epc-mode: webui
@@ -19,8 +19,8 @@ spec:
 apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
 kind: Deployment
 metadata:
-  name: open5gs-webui
-  namespace: open5gs  
+  name: {{ .Release.Namespace }}-webui
+  namespace: {{ .Release.Namespace }}  
   labels:
     epc-mode: webui
 spec:
