--- a/thesis-scenarios/scenario_4/ue.conf
+++ b/thesis-scenarios/scenario_4/ue.conf
@@ -373,8 +373,8 @@ enable = false
 #
 #####################################################################
 [sim]
-airplane_t_on_ms  = 30000
-airplane_t_off_ms = 30000
+# airplane_t_on_ms  = 30000
+# airplane_t_off_ms = 30000
 
 #####################################################################
 # General configuration options
