--- a/k8s-4g-core/templates/mme/mme-configmap.yaml
+++ b/k8s-4g-core/templates/mme/mme-configmap.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: open5gs-mme-config
-  namespace: open5gs
+  name: {{ .Relase.Namespace }}-mme-config
+  namespace: {{ .Relase.Namespace }}
   labels:
     epc-mode: mme
 data:
