--- a/k8s-4g-core/templates/hss-database/mongo-statefulset.yaml
+++ b/k8s-4g-core/templates/hss-database/mongo-statefulset.yaml
@@ -31,7 +31,7 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: mongo
-    namespace: {{ .Relase.Namespace }}
+    namespace: {{ .Release.Namespace }}
 ---
 apiVersion: v1
 kind: Service
