--- a/k8s-4g-core/values.yaml
+++ b/k8s-4g-core/values.yaml
@@ -2,7 +2,7 @@ mmeExternalAddress: 1.2.3.4
 sgwuExternalAddress: 1.2.3.4
 webUiExternalAddress: 1.2.3.4
 webUiPort: 80
-initSubcribers: false
+initSubcribers: true
 mongoReplicas: 1
 
 requestsPreferences:
@@ -28,8 +28,8 @@ resources:
     memory: "64Mi"
     cpu: "250m"
   limits:
-    memory: "250Mi"
-    cpu: "500m"
+    memory: "100Mi"
+    cpu: "300m"
 
 image:
   repository: open5gs-custom
