--- a/k8s-4g-core/templates/hss-database/mongo-statefulset.yaml
+++ b/k8s-4g-core/templates/hss-database/mongo-statefulset.yaml
@@ -109,6 +109,8 @@ spec:
               value: "role=mongo,environment=test"
             - name: KUBERNETES_SERVICE_NAME
               value: "mongodb"
+      nodeSelector:
+        mobile-core: cp
       volumes:
       - name: mongo-persistent-storage
         emptyDir: {}
