--- a/k8s-4g-core/templates/mme/mme-deploy.yaml
+++ b/k8s-4g-core/templates/mme/mme-deploy.yaml
@@ -81,6 +81,8 @@ spec:
             - name: gtpc
               containerPort: 2123
               protocol: UDP                        
+      nodeSelector:
+        mobile-core: cp
       volumes:
         - name: {{ .Release.Namespace }}-mme-config
           configMap:
