--- a/k8s-4g-core/templates/sgwc/sgwc-deploy.yaml
+++ b/k8s-4g-core/templates/sgwc/sgwc-deploy.yaml
@@ -55,6 +55,8 @@ spec:
             - name: pfcp
               containerPort: 8805
               protocol: UDP
+      nodeSelector:
+        mobile-core: cp
       volumes:
         - name: {{ .Release.Namespace }}-sgwc-config
           configMap:
