--- a/k8s-4g-core/templates/sgwu/sgwu-deploy.yaml
+++ b/k8s-4g-core/templates/sgwu/sgwu-deploy.yaml
@@ -71,6 +71,8 @@ spec:
             - name: pfcp
               containerPort: 8805
               protocol: UDP
+      nodeSelector:
+        mobile-core: up
       volumes:
         - name: {{ .Release.Namespace }}-sgwu-config
           configMap:
