--- a/thesis-scenarios/scenario_1/enb.conf
+++ b/thesis-scenarios/scenario_1/enb.conf
@@ -20,9 +20,9 @@
 enb_id = 0x19B
 mcc = 001
 mnc = 01
-mme_addr = 1.2.3.4
-gtp_bind_addr = 192.168.49.1
-s1c_bind_addr = 192.168.49.1
+mme_addr = 192.168.99.101
+gtp_bind_addr = 192.168.1.67
+s1c_bind_addr = 192.168.1.67
 n_prb = 50
 #tm = 4
 #nof_ports = 2
@@ -283,7 +283,7 @@ enable = false
 # pusch_8bit_decoder:   Use 8-bit for LLR representation and turbo decoder trellis computation (Experimental)
 # nof_phy_threads:      Selects the number of PHY threads (maximum 4, minimum 1, default 3)
 # metrics_period_secs:  Sets the period at which metrics are requested from the eNB. 
-# metrics_csv_enable:   Write eNB metrics to CSV file.
+# metrics_csv_enable:  true
 # metrics_csv_filename: File path to use for CSV metrics.
 # pregenerate_signals:  Pregenerate uplink signals after attach. Improves CPU performance.
 # tx_amplitude:         Transmit amplitude factor (set 0-1 to reduce PAPR)
@@ -298,8 +298,8 @@ enable = false
 #pusch_8bit_decoder   = false
 #nof_phy_threads      = 3
 #metrics_period_secs  = 1
-#metrics_csv_enable   = false
-#metrics_csv_filename = /tmp/enb_metrics.csv
+metrics_csv_enable   = false
+metrics_csv_filename = /tmp/enb_metrics.csv
 #pregenerate_signals  = false
 #tx_amplitude         = 0.6
 #rrc_inactivity_timer = 30000
