fix nginx port in srsenb-deploy.yaml

--- a/srsenb-chart/templates/srsenb-deploy.yaml
+++ b/srsenb-chart/templates/srsenb-deploy.yaml
@@ -16,7 +16,7 @@ spec:
         srsenb: exporter
       annotations:
         prometheus.io/scrape: 'true'
-        prometheus.io/port: '{{ .nginx.port }}'
+        prometheus.io/port: '{{ .Values.nginx.port }}'
         prometheus.io/scheme: 'https'
     spec:
       containers:
