--- a/k8s-4g-core/templates/srsenb-exporter/srsenb-svc-monitor.yaml
+++ b/k8s-4g-core/templates/srsenb-exporter/srsenb-svc-monitor.yaml
@@ -5,6 +5,7 @@ metadata:
     namespace: {{ .Release.Namespace }}
     labels:
         app: srsenb
+        release: prometheus
 spec:
     endpoints:
     -   port: metrics
