srsenb service monitor for prometheus

--- a/k8s-4g-core/templates/srsenb-exporter/srsenb-svc.yaml
+++ b/k8s-4g-core/templates/srsenb-exporter/srsenb-svc.yaml
@@ -9,7 +9,7 @@ spec:
   selector:
     app: srsenb
   ports:
-  - name: nginxport
+  - name: metrics
     port: 8080
     targetPort: 8080
     protocol: TCP
