--- a/k8s-4g-core/templates/hss-database/mongo-statefulset.yaml
+++ b/k8s-4g-core/templates/hss-database/mongo-statefulset.yaml
@@ -70,7 +70,7 @@ spec:
       terminationGracePeriodSeconds: 10
       containers:
         - name: mongo
-          image: mongo
+          image: mongo:nikos
           {{ if eq .Values.initSubcribers true }}
           lifecycle:
             postStart:
