Modified charts to support 5G Core NFs

--- a/k8s-4g-core/templates/amf/amf-configmap.yaml
+++ b/k8s-4g-core/templates/amf/amf-configmap.yaml
@@ -12,7 +12,7 @@ data:
     amf:
         sbi:
           - addr: 0.0.0.0
-          - port: 7777
+            port: 7777
         ngap:
            dev: eth0
         guami:
