--- a/k8s-4g-core/templates/pgwc/pgwc-configmap.yaml
+++ b/k8s-4g-core/templates/pgwc/pgwc-configmap.yaml
@@ -10,15 +10,17 @@ data:
     logger:
         file: /var/log/open5gs/pgwc.log
     
-    parameter:
-    
     smf:
-        freeDiameter: /open5gs/config-map/diameter-pgwc.conf
-        gtpc:
-           dev: eth0
+        sbi:
+          - addr: 0.0.0.0
+            port: 7777
         pfcp:
            dev: eth0
-        pdn:
+        gtpc:
+           dev: eth0
+        gtpu:
+           dev: eth0
+        subnet:
           - addr: 10.45.0.1/16
           - addr: cafe::1/64
         dns:
