--- a/k8s-4g-core/templates/pgwu/pgwu-deploy.yaml
+++ b/k8s-4g-core/templates/pgwu/pgwu-deploy.yaml
@@ -1,6 +1,25 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: {{ .Release.Namespace }}-upf-svc-pool-external
+  namespace: {{ .Release.Namespace }}
+  labels:
+    epc-mode: upf
+spec:
+  type: LoadBalancer
+  externalIPs:
+    - {{ .Values.upfExternalAddress }}
+  ports:
+    - name: gtpu
+      port: 2152
+      targetPort: 2152
+      protocol: UDP
+  selector:
+    epc-mode: upf
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: {{ .Release.Namespace }}-pgwu-svc-pool
   namespace: {{ .Release.Namespace }}
   labels:
@@ -8,12 +27,6 @@ metadata:
 spec:
   type: ClusterIP
   ports:
-  # - name: gtpc
-  #   port: 2123
-  #   protocol: UDP
-  - name: gtpu
-    port: 2152
-    protocol: UDP
   - name: pfcp
     port: 8805
     protocol: UDP   
