--- a/k8s-4g-core/templates/pgwu/pgwu-configmap.yaml
+++ b/k8s-4g-core/templates/pgwu/pgwu-configmap.yaml
@@ -16,7 +16,9 @@ data:
         pfcp:
            dev: eth0
         gtpu:
-           dev: eth0
-        pdn:
+          - dev: eth0
+            advertise:
+             - {{ .Values.upfExternalAddress }} 
+        subnet:
           - addr: 10.45.0.1/16
           - addr: cafe::1/64
