--- a/k8s-4g-core/values.yaml
+++ b/k8s-4g-core/values.yaml
@@ -1,9 +1,12 @@
-mmeExternalAddress: 172.16.4.215
-sgwuExternalAddress: 172.16.5.33
-webUiExternalAddress: 172.16.4.215
+mmeExternalAddress: 172.16.4.239
+sgwuExternalAddress: 172.16.4.235
+webUiExternalAddress: 172.16.4.239
+upfExternalAddress: 172.16.4.235
 webUiPort: 80
 initSubcribers: true
 mongoReplicas: 1
+network_4g: false
+
 
 requestsPreferences:
   hssDatabase:
@@ -34,7 +37,7 @@ resources:
     cpu: "300m"
 
 image:
-  repository: naposto/open5gs-custom
+  repository: naposto/ogs-2.4.8
   pullPolicy: IfNotPresent
   tag: latest
 
