--- a/k8s-4g-core/templates/hss/hss-free-diameter-configmap.yaml
+++ b/k8s-4g-core/templates/hss/hss-free-diameter-configmap.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.network_4g true }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -272,3 +273,4 @@ data:
     ConnectPeer = "mme.localdomain" { ConnectTo = "{{ .Release.Namespace }}-mme-svc-pool"; No_TLS; };
 
     ##############################################################
+{{ end }}
