--- a/k8s-4g-core/templates/mme/mme-deploy.yaml
+++ b/k8s-4g-core/templates/mme/mme-deploy.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.network_4g true }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -90,3 +91,4 @@ spec:
         - name: {{ .Release.Namespace }}-mme-diameter
           configMap:
             name: {{ .Release.Namespace }}-mme-diameter
+{{ end }}
