--- a/k8s-4g-core/templates/mme/mme-free-diameter-configmap.yaml
+++ b/k8s-4g-core/templates/mme/mme-free-diameter-configmap.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.network_4g true }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -273,3 +274,4 @@ data:
 
 
     ##############################################################
+{{ end }}
