--- a/k8s-4g-core/templates/pcrf/pcrf-deploy.yaml
+++ b/k8s-4g-core/templates/pcrf/pcrf-deploy.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.network_4g true }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -60,3 +61,4 @@ spec:
         - name: {{ .Release.Namespace }}-pcrf-diameter
           configMap:
             name: {{ .Release.Namespace }}-pcrf-diameter            
+{{ end }}
