--- a/k8s-4g-core/templates/sgwc/sgwc-configmap.yaml
+++ b/k8s-4g-core/templates/sgwc/sgwc-configmap.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.network_4g true }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -19,3 +20,4 @@ data:
     sgwu:
         pfcp:
           - name: "{{ .Release.Namespace }}-sgwu-svc-pool"        
+{{ end }}
