--- a/k8s-4g-core/templates/sgwc/sgwc-deploy.yaml
+++ b/k8s-4g-core/templates/sgwc/sgwc-deploy.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.network_4g true }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -61,3 +62,4 @@ spec:
         - name: {{ .Release.Namespace }}-sgwc-config
           configMap:
             name: {{ .Release.Namespace }}-sgwc-config
+{{ end }}
