Modify Flannel to work with interface

--- a/k8s-4g-core/templates/amf/amf-configmap.yaml
+++ b/k8s-4g-core/templates/amf/amf-configmap.yaml
@@ -11,8 +11,7 @@ data:
         file: /var/log/open5gs/amf.log    
     amf:
         sbi:
-          - addr: 0.0.0.0
-            port: 7777
+          - dev: eth0
         ngap:
            dev: eth0
         guami:
@@ -46,4 +45,4 @@ data:
     nrf:
       sbi:
         - name: "{{ .Release.Namespace }}-nrf-svc-pool"
-          port: 7777
+          port: 80
