--- a/k8s-4g-core/templates/pgwc/pgwc-configmap.yaml
+++ b/k8s-4g-core/templates/pgwc/pgwc-configmap.yaml
@@ -12,8 +12,7 @@ data:
     
     smf:
       sbi:
-        - addr: 0.0.0.0
-          port: 7777
+        - dev: eth0
       pfcp:
           dev: eth0
       gtpc:
@@ -36,4 +35,4 @@ data:
     nrf:
       sbi:
         - name: "{{ .Release.Namespace }}-nrf-svc-pool"
-          port: 7777
+          port: 80
