--- a/k8s-4g-core/templates/ausf/ausf-configmap.yaml
+++ b/k8s-4g-core/templates/ausf/ausf-configmap.yaml
@@ -12,5 +12,10 @@ data:
     
     ausf:
       sbi:
-        - addr: 0.0.0.0
+        - dev: eth0
+          port: 7777
+    
+    nrf:
+      sbi:
+        - name: "{{ .Release.Namespace }}-nrf-svc-pool"
           port: 7777
