--- a/k8s-4g-core/templates/pcf/pcf-configmap.yaml
+++ b/k8s-4g-core/templates/pcf/pcf-configmap.yaml
@@ -14,5 +14,9 @@ data:
     
     pcf:
       sbi:
-        - addr: 0.0.0.0
+        - dev: eth0
+          port: 7777
+    nrf:
+      sbi:
+        - name: "{{ .Release.Namespace }}-nrf-svc-pool"
           port: 7777
