--- a/k8s-4g-core/templates/pgwu/pgwu-configmap.yaml
+++ b/k8s-4g-core/templates/pgwu/pgwu-configmap.yaml
@@ -21,4 +21,6 @@ data:
              - {{ .Values.upfExternalAddress }} 
         subnet:
           - addr: 10.45.0.1/16
+            dnn: internet
           - addr: cafe::1/64
+            dnn: internet
