--- a/k8s-4g-core/templates/pgwu/pgwu-deploy.yaml
+++ b/k8s-4g-core/templates/pgwu/pgwu-deploy.yaml
@@ -71,7 +71,7 @@ spec:
               ip link set ogstun up;
               sh -c "echo 1 > /proc/sys/net/ipv4/ip_forward";
               iptables -t nat -A POSTROUTING -s 10.45.0.0/16 ! -o ogstun -j MASQUERADE;
-              open5gs-upfd -c /open5gs/config-map/pgwu.yaml;
+              open5gs-upfd -c /open5gs/config-map/pgwu.yaml -d;
           {{ if eq .Values.requestsPreferences.pgwu.requestsLimitsDefinition true}}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
