--- a/k8s-4g-core/templates/amf/amf-deploy.yaml
+++ b/k8s-4g-core/templates/amf/amf-deploy.yaml
@@ -39,7 +39,7 @@ spec:
         - name: amf
           image: {{ .Values.image.repository }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["open5gs-amfd", "-c", "/open5gs/config-map/amf.yaml"]
+          command: ["open5gs-amfd", "-c", "/open5gs/config-map/amf.yaml", "-d"]
           volumeMounts:
           - name: {{ .Release.Namespace }}-amf-config
             mountPath: /open5gs/config-map/amf.yaml
