--- a/k8s-4g-core/templates/pgwc/pgwc-deploy.yaml
+++ b/k8s-4g-core/templates/pgwc/pgwc-deploy.yaml
@@ -36,7 +36,7 @@ spec:
         - name: pgwc
           image: {{ .Values.image.repository }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["open5gs-smfd", "-c", "/open5gs/config-map/pgwc.yaml"]
+          command: ["open5gs-smfd", "-c", "/open5gs/config-map/pgwc.yaml", "-d"]
           volumeMounts:
           - name: {{ .Release.Namespace }}-pgwc-config
             mountPath: /open5gs/config-map/pgwc.yaml
