--- a/k8s-4g-core/templates/nrf/nrf-configmap.yaml
+++ b/k8s-4g-core/templates/nrf/nrf-configmap.yaml
@@ -7,7 +7,7 @@ metadata:
     epc-mode: nrf
 data:
   nrf.yaml: |
-    db_uri: mongodb://mongodb/open5gs?replicaSet=rs0
+    db_uri: {{ .Values.db_uri }}
     
     logger:
         file: /var/log/open5gs/nrf.log
