--- a/k8s-4g-core/templates/udr/udr-configmap.yaml
+++ b/k8s-4g-core/templates/udr/udr-configmap.yaml
@@ -7,7 +7,7 @@ metadata:
     epc-mode: udr
 data:
   udr.yaml: |
-    db_uri: mongodb://mongodb/open5gs?replicaSet=rs0
+    db_uri: {{ .Values.db_uri }}
     
     logger:
         file: /var/log/open5gs/udr.log
