--- a/k8s-4g-core/templates/webui/web-ui-deploy.yaml
+++ b/k8s-4g-core/templates/webui/web-ui-deploy.yaml
@@ -44,6 +44,7 @@ spec:
            npm run dev
         env:
         - name: DB_URI
-          value: "mongodb://mongodb/open5gs?replicaSet=rs0"
+          value: "{{ .Values.db_uri }}"
+          # value: "mongodb://mongodb/open5gs?replicaSet=rs0"
       nodeSelector:
         mobile-core: cp
