--- a/k8s-4g-core/templates/hss-database/mongo-statefulset.yaml
+++ b/k8s-4g-core/templates/hss-database/mongo-statefulset.yaml
@@ -4,34 +4,34 @@ metadata:
   name: mongo
   namespace: {{ .Release.Namespace }}
 ---
-apiVersion: rbac.authorization.k8s.io/v1beta1
-kind: ClusterRole
-metadata:
-  name: pod-service-endpoint-reader
-rules:
-  - apiGroups:
-      - ""
-    resources:
-      - pods
-      - services
-      - endpoints
-    verbs:
-      - get
-      - list
-      - watch
----
-kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
-metadata:
-  name: system:serviceaccount:open5g:mongo
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: pod-service-endpoint-reader
-subjects:
-  - kind: ServiceAccount
-    name: mongo
-    namespace: {{ .Release.Namespace }}
+# apiVersion: rbac.authorization.k8s.io/v1
+# kind: ClusterRole
+# metadata:
+#   name: pod-service-endpoint-reader
+# rules:
+#   - apiGroups:
+#       - ""
+#     resources:
+#       - pods
+#       - services
+#       - endpoints
+#     verbs:
+#       - get
+#       - list
+#       - watch
+# ---
+# apiVersion: rbac.authorization.k8s.io/v1beta1
+# kind: ClusterRoleBinding
+# metadata:
+#   name: system:serviceaccount:open5g:mongo
+# subjects:
+# - kind: ServiceAccount
+#   name: mongo
+#   namespace: {{ .Release.Namespace }}
+# roleRef:
+#   kind: ClusterRole
+#   name: pod-service-endpoint-reader
+#   apiGroup: rbac.authorization.k8s.io
 ---
 apiVersion: v1
 kind: Service
@@ -65,12 +65,12 @@ spec:
         role: mongo
         environment: test
     spec:
-      serviceAccountName: mongo
-      automountServiceAccountToken: true
-      terminationGracePeriodSeconds: 10
+      # serviceAccountName: mongo
+      # automountServiceAccountToken: true
+      # terminationGracePeriodSeconds: 10
       containers:
         - name: mongo
-          image: mongo:nikos
+          image: mongo
           {{ if eq .Values.initSubcribers true }}
           lifecycle:
             postStart:
@@ -81,7 +81,7 @@ spec:
           command:
             - mongod
           args:
-            - "--replSet=rs0"
+            # - "--replSet=rs0"
             - "--bind_ip=0.0.0.0"
           ports:
             - containerPort: 27017
@@ -102,13 +102,13 @@ spec:
             {{- toYaml .Values.resources | nindent 12 }}
           {{ end }}
 
-        - name: mongo-sidecar
-          image: morphy/k8s-mongo-sidecar
-          env:
-            - name: KUBERNETES_POD_LABELS
-              value: "role=mongo,environment=test"
-            - name: KUBERNETES_SERVICE_NAME
-              value: "mongodb"
+        # - name: mongo-sidecar
+        #   image: morphy/k8s-mongo-sidecar
+        #   env:
+        #     - name: KUBERNETES_POD_LABELS
+        #       value: "role=mongo,environment=test"
+        #     - name: KUBERNETES_SERVICE_NAME
+        #       value: "mongodb"
       nodeSelector:
         mobile-core: cp
       volumes:
